# irb-storage-public-scripts

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_BACKEND.md  CLAUDE_FRONTEND.md  README.md  build-local.ps1  build.sh  installer.iss  minio-sts-credentials-request.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
.husky/: pre-push
bifrost-mount/: bifrost_shared-0.1.0-py3-none-any.whl  build-macos.sh  installer.iss  pyproject.toml
bifrost-mount/src/: backend.py  config.py  main.py
bifrost-transfer/: build-macos.sh  build.sh  installer.iss  pyproject.toml
bifrost-transfer/src/: config.py  main.py  meta_fields.py  pip-requirements.txt
docs/superpowers/plans/: 2026-05-19-bifrost-mount-logging.md  2026-05-19-winfsp-auto-install.md  2026-05-20-bifrost-transfer-tags.md  2026-05-21-tag-manager-file-editor.md  2026-06-02-simplificar-variables-modo.md  2026-06-03-cifs-on-demand.md
docs/superpowers/specs/: 2026-05-18-llm-wiki-design.md  2026-05-19-bifrost-mount-logging-design.md  2026-05-19-winfsp-auto-install-design.md  2026-05-20-bifrost-transfer-tags-design.md  2026-05-21-tag-manager-file-editor-design.md  2026-06-02-simplificar-variables-modo-design.md  2026-06-03-cifs-on-demand-design.md
docs/wiki/: CLAUDE_WIKI.md  index.md  log.md
docs/wiki/decisiones/: variables-modo-is-web.md  wheel-local-bifrost-shared.md
docs/wiki/gotchas/: winfsp-auto-install-windows.md
minio/: OLD-bifrost-tkinter.py  OLD-minio-rclone-GUI.py  OLD-minio_functions.py  backend.py  bifrost.py  frontend.py  macos-third-party-assets-downloader.sh  minio-rclone-check-GUI.py  minio-rclone-copy-GUI.BAK2.py  minio-rclone-copy-GUI.py  minio-sts-credentials-request.py  minio_functions.py  minio_rclone_launcher_commented.py  pip-requirements.txt
minio/.github/workflows/: main.yml
old/: backend-old.py
shared/: backend.py  linux-assets-downloader.sh  macos-assets-downloader.sh  macos-rclone-downloader.sh  pip-requirements.txt  pyproject.toml  requirements.txt
shared/bifrost_backend/: backend.py
shared/bifrost_frontend/: frontend.py
shared/src/bifrost_backend/: backend.py
shared/src/bifrost_frontend/: frontend.py
src/: backend.py  macos-assets-downloader.sh  main.py  pip-requirements.txt  windows-assets-downloader.sh
src/assets/fuse_t.framework/: fuse_t
src/assets/fuse_t.framework/Versions/A/: fuse_t
src/assets/fuse_t.framework/Versions/A/Modules/: module.modulemap
src/assets/fuse_t.framework/Versions/A/Resources/: Info.plist
src/assets/fuse_t.framework/Versions/A/_CodeSignature/: CodeResources
