[project]
name = "bifrost-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flet==0.84.0",  
    "boto3==1.42.12",
    "botocore==1.42.12",
    "cryptography==46.0.3",
    "jmespath==1.0.1",
    "ldap3==2.9.1",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "urllib3==1.26.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bifrost_backend", "src/bifrost_frontend"]